add shift update

--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -19,6 +19,7 @@
     "window": true,
     "fetch": true,
     "confirm": true,
+    "FormData": true,
   },
   "settings": {
     "import/resolver": {
