--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server -d --progress --colors --hot --config ./webpack.config.js",
-    "build": "webpack --progress --colors --config ./webpack.config.js",
+    "build": "webpack --progress --colors --config ./webpack.config.prod.js",
     "test": "mocha --compilers js:babel-core/register --require ./test/setup.js 'src/**/*spec.js'",
     "test:watch": "npm run test -- --watch",
     "storybook": "start-storybook -p 6006 -c src/.storybook",
@@ -41,6 +41,7 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-2": "^6.11.0",
     "chai": "^3.5.0",
+    "compression-webpack-plugin": "^0.3.2",
     "css-loader": "^0.23.1",
     "enzyme": "^2.4.1",
     "eslint": "^3.1.1",
